# DocGen_LLM

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  python-test-project.db  test.json
src/: cli.py  main.py
src/docker/: clangd.Dockerfile  omnisharp.Dockerfile  pyright.Dockerfile  tcl.Dockerfile
src/documentation/: doc_aggregate.py
src/extraction/: extract_imports.py  extraction_utils.py  file_extractor.py  lsp_client.py  lsp_extractor(unused).py  lsp_extractor.py  lsp_installer.py  models.py  reference_analyzer.py
src/extraction/code_hierarchy/: __init__.py  extractor_factory.py  language_definitions.py  language_extractor.py
src/extraction/database/: init_db.sql
src/extraction/extract_config/: LSP_kind.json  excluded_files.json  github_gitignore_mapping.json  languages_config.json  lsp_configs.json  lsp_only_config.json  lsp_servers.json
src/extraction/lsp_client/: __init__.py  abstract_client.py  (+3 more)
src/legacy/: ast_extraction.py  database_service.py  enhanced_lsp_extractor.py  enhanced_models.py  lsp_enhancer.py  test_pylsp.py  testmultils.py  testmultils_servers.py  testmultils_simple.py
src/llm/: LLM_documentation.py  LLM_documentation_db.py  aggregate_docs.py  documentation_generator.py  documentation_service.py  init.py  json_to_docstring.py  json_to_format.py  llm_client.py  llm_template.json
src/logging/: logging.py
src/storage/: calls.md  database.py  database_call.py  db_creation.sql  functions.sql
test-projects/csharp-test-project/: README.md  UnitTest1.cs  csharp-test-project.csproj  csharp-test-project.sln
(+5 files in other folders)
