[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Natgan",email = "Natgan@git.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "tree-sitter (>=0.24.0,<0.25.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tree-sitter-language-pack (>=0.9.0,<0.10.0)",
    "pathspec (>=0.12.1,<0.13.0)",
    "requests (>=2.32.4,<3.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
